	 our window (patch #1150684) (Darren).
20050226 ui/gtk/{debugger.c,gtkinternals.h,gtkui.c,memory.c}: make the
	 scroll wheel work when used over the disassembly pane or the
	 memory dump (patch #1150709) (Darren).
20050226 tape.[ch]: Media/Tape/Play always starts the tape playing, even
	 if tape traps are active. Makes working with normal speed custom
	 loader blocks less painful (patch #1150682) (Darren).
20050226 ui/gtk/debugger.c: pad disassembled instructions to fixed width
	 so debugger pane stays a constant width (patch #1150686)
	 (Darren).
20050226 perl/cpp-perl.pl,perl/Fuse/Dialog.pm,ui/options.dat,
	 ui/gtk/Makefile.am,widget/Makefile.am: allow SDL full-screen mode
	 to be used (patch #1150687) (Darren).
20050305 widget/widget.c: 'round' widget corners (patch #1150690)
	 (Darren).
20050305 z80/z80.c: get interrupt length (closer) to correct (thanks,
	 Woody, Jon Needle and Ramsoft).
20050305 configure.in,lib/{Makefile.am,disk_plus3.[szx|z80],tape_128.[szx|z80],
         tape_16.[szx|z80], tape_2048.[szx|z80], tape_2068.[szx|z80],
         tape_48.[szx|z80], tape_pentagon.[szx|z80], tape_plus2.[szx|z80],
         tape_plus2a.[szx|z80], tape_plus3.[szx|z80], tape_scorpion.[szx|z80]},
         lib/[un]compressed/{disk_plus3.[szx|z80],tape_128.[szx|z80],
         tape_16.[szx|z80], tape_2048.[szx|z80], tape_2068.[szx|z80],
         tape_48.[szx|z80], tape_pentagon.[szx|z80], tape_plus2.[szx|z80],
         tape_plus2a.[szx|z80], tape_plus3.[szx|z80], tape_scorpion.[szx|z80]}:
         Make configure choose compressed or uncompressed auto-load snapshots
         based on libspectrum support for the feature (Fred).
20050306 configure.in: Annoyingly missed path from link invocation (Fred).
20050314 display.c: don't extend y past the end of the screen to avoid array
         overruns (Fred).
20050331 widget/{filesel.c,menu.c,roms.c,widget_internals_h}: add title to
	 fileselector widget (half of patch #1150689) (Darren).